add code climate reporter id

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@ jobs:
           POSTGRES_USER: postgres
           DB_CONNECTION: pgsql
           DB_HOST: 127.0.0.1
-          CACHE_DRIVER: file
           APP_KEY: base64:vSPnIS7mqyGVPmFPbcG9ZZQDgUUl0r3qdvaS/P4HPVg=
           DB_DATABASE: circle_test
           DB_USERNAME: ubuntu
           DB_PASSWORD: ""
+          CC_TEST_REPORTER_ID: 10a9c9d794a1deb68f8c4756e964d4dc641441b45517f202af589a3816d0f371
 
       - image: circleci/postgres:10.6-ram
         environment:
