--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,19 @@ jobs:
   build:
     docker:
       - image: circleci/php:7.3-node-browsers
+        environment:
+          APP_KEY: base64:vSPnIS7mqyGVPmFPbcG9ZZQDgUUl0r3qdvaS/P4HPVg=
+          APP_ENV: testing
+          DB_DATABASE: circle_test
+          DB_USERNAME: ubuntu
+          DB_PASSWORD: ""
+          CC_TEST_REPORTER_ID: 10a9c9d794a1deb68f8c4756e964d4dc641441b45517f202af589a3816d0f371
+
       - image: circleci/postgres:10.6-ram
         environment:
-          APP_ENV: testing
           POSTGRES_USER: ubuntu
           POSTGRES_DB: circle_test
           POSTGRES_PASSWORD: ""
-          APP_KEY: base64:vSPnIS7mqyGVPmFPbcG9ZZQDgUUl0r3qdvaS/P4HPVg=
-          CC_TEST_REPORTER_ID: 10a9c9d794a1deb68f8c4756e964d4dc641441b45517f202af589a3816d0f371
 
     working_directory: ~/app
 
